Create login for main

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
     </head>
     <body>
         <main>
-            
+            <section>
+                <form>
+                    <h2>Welcome back!</h2>
+                    <p>Enter your Credentials to access your account</p>
+                    <div>
+                        <label for="log_in">Email address</label>
+                        <input type="text" id="log_in" class="log_pass" placeholder="Enter your email.."/>
+                    </div>
+                    <div>
+                        <label for="password">Password</label>
+                        <a href="#" id="forgot">Forgot password</a>
+                        <input type="password" id="password" class="log_pass" placeholder="Enter your password.."/>
+                    </div>
+                    <div class="login_submit">
+                        <input type="submit" id="login" value="Login"></br></br>
+                        <p>or</p>
+                    </div></br></br></br></br>
+                </form>
+            </section>
         </main>
     </body>
 </html>
