--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                         <input type="submit" id="login" value="Login"></br></br>
                         <p>or</p>
                     </div></br></br></br></br>
+                    <div class="buttons">
+                        <button class="button1">Sign in with Google</button>
+                        <button class="button2">Sign in width Apple</button>
+                    </div>
+                    <div class="not_sign">
+                        <a href="#">Don't have an account?</a>
+                        <a href="#">Sign Up</a>
+                    </div>
                 </form>
             </section>
         </main>
