--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Document</title>
     </head>
     <body>
@@ -27,7 +28,9 @@
                         <p>or</p>
                     </div></br></br></br></br>
                     <div class="buttons">
+                        <i class="fa fa-google"></i>
                         <button class="button1">Sign in with Google</button>
+                        <i class="fa fa-apple"></i>
                         <button class="button2">Sign in width Apple</button>
                     </div>
                     <div class="not_sign">
@@ -35,6 +38,9 @@
                         <a href="#">Sign Up</a>
                     </div>
                 </form>
+                <div class="img-cont">
+                    <img class="image" src="image/img.jpg">
+                </div>
             </section>
         </main>
     </body>
